--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.4",
   "description": "Access xvideos.com programmatically",
   "main": "xvideos.js",
-  "scripts": {},
+  "scripts": {
+    "start": "node example.js"
+  },
   "repository": {
     "type": "git",
     "url": "git://github.com/deoxxa/xvideos.git"
@@ -17,6 +19,6 @@
   "author": "Conrad Pankoff <deoxxa@fknsrs.biz> (http://www.fknsrs.biz/)",
   "license": "BSD",
   "dependencies": {
-    "cheerio": "~0.10.8"
+    "cheerio": "^0.20.0"
   }
 }
